--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jet A1 Fuel Uplift Calculator</title>
+    <title>Jet A1 Uplift Calculator</title>
     <style>
         /* Style the result text to be red and bold */
         #upliftFuelResult {
@@ -13,19 +13,19 @@
     </style>
 </head>
 <body>
-    <h1>Jet A1 Fuel Uplift Calculator</h1>
+    <h1>Jet A1 Uplift Calculator</h1>
     
     <form id="fuelForm">
-        <label for="remainingFuel">Enter remaining fuel in pounds (lbs):</label>
+        <label for="remainingFuel">Enter remaining fuel (lbs):</label>
         <input type="number" id="remainingFuel" name="remainingFuel" step="any" required><br><br>
 
-        <label for="requiredFuel">Enter total required fuel in pounds (lbs):</label>
+        <label for="requiredFuel">Enter total required fuel (lbs):</label>
         <input type="number" id="requiredFuel" name="requiredFuel" step="any" required><br><br>
 
-        <label for="density">Enter fuel density in kg/L (if known):</label>
+        <label for="density">Enter fuel density (kg/L) - if known:</label>
         <input type="number" id="density" name="density" step="any"><br><br>
 
-        <label for="temperature">Enter fuel temperature in °C (optional):</label>
+        <label for="temperature">Enter fuel temperature (deg C) - optional:</label>
         <input type="number" id="temperature" name="temperature" step="any" oninput="computeDensityFromTemperature()"><br><br>
 
         <label for="convertTo">Convert required uplift fuel to:</label>
