--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <label for="density">Enter fuel density (kg/L) - if known:</label>
         <input type="number" id="density" name="density" step="any"><br><br>
 
-        <label for="temperature">Enter fuel temperature (deg C) - optional:</label>
+        <label for="temperature">Enter fuel temperature (deg C) - optional if density unknown:</label>
         <input type="number" id="temperature" name="temperature" step="any" oninput="computeDensityFromTemperature()"><br><br>
 
         <label for="convertTo">Convert required uplift fuel to:</label>
